Refresh API guide and add educational technology explainer